Fix the z-index stacking of drop-down menus

--- a/wcfsetup/install/files/style/layout/layout.scss
+++ b/wcfsetup/install/files/style/layout/layout.scss
@@ -207,6 +207,7 @@ html.iOS select {
 	position: fixed;
 	right: 0;
 	top: 0;
+	z-index: 450;
 }
 
 #pageOverlayContainer > *:not(.dropdownMenuContainer) {
